logs/error-2023-04-15.log
2023-04-15T03:38:52.015Z [buyease-api] error: uncaughtException: Route.post() requires a callback function but got a [object Undefined]
Error: Route.post() requires a callback function but got a [object Undefined]
    at Route.<computed> [as post] (/home/psychval/buyease/node_modules/express/lib/router/route.js:211:15)
    at Function.proto.<computed> [as post] (/home/psychval/buyease/node_modules/express/lib/router/index.js:521:19)
    at Object.<anonymous> (/home/psychval/buyease/server/src/routes/authRoutes.js:7:8)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Module.require (internal/modules/cjs/loader.js:961:19)
    at require (internal/modules/cjs/helpers.js:92:18)
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:29:20)
2023-04-15T15:25:10.637Z [buyease-api] error: uncaughtException: Unexpected token '.'
/home/psychval/buyease/server/src/utils/validations/signupValidation.js:11
                const user = await User.findOne({req.email});
                                                    ^

SyntaxError: Unexpected token '.'
    at wrapSafe (internal/modules/cjs/loader.js:988:16)
    at Module._compile (internal/modules/cjs/loader.js:1036:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Module.require (internal/modules/cjs/loader.js:961:19)
    at require (internal/modules/cjs/helpers.js:92:18)
    at Object.<anonymous> (/home/psychval/buyease/server/src/middlewares/controllers/signupController.js:3:26)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
2023-04-15T15:25:23.564Z [buyease-api] error: uncaughtException: Unexpected token '.'
/home/psychval/buyease/server/src/utils/validations/signupValidation.js:11
                const user = await User.findOne({req.body.email});
                                                    ^

SyntaxError: Unexpected token '.'
    at wrapSafe (internal/modules/cjs/loader.js:988:16)
    at Module._compile (internal/modules/cjs/loader.js:1036:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Module.require (internal/modules/cjs/loader.js:961:19)
    at require (internal/modules/cjs/helpers.js:92:18)
    at Object.<anonymous> (/home/psychval/buyease/server/src/middlewares/controllers/signupController.js:3:26)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
